[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Text Engine.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Text Engine.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/FileOpener.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/TextBox.png" type="Texture" id=5]
[ext_resource path="res://Art/CharacterName.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[node name="Node2D" type="Control"]
script = ExtResource( 1 )

[node name="TextOutput" type="Label" parent="."]
margin_left = 18.0
margin_top = 192.0
margin_right = 464.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 3 )
autowrap = true
max_lines_visible = 4

[node name="TextBox" type="Sprite" parent="TextOutput"]
position = Vector2( 222, 46.5 )
scale = Vector2( 2.69048, 0.33 )
z_index = -3
texture = ExtResource( 5 )

[node name="ClickDetection" type="Button" parent="TextOutput/TextBox"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -150.0
margin_right = -82.0
margin_bottom = -146.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 3 )

[node name="CharacterName" type="Label" parent="."]
margin_left = 16.0
margin_top = 168.0
margin_right = 136.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )

[node name="GreyBox" type="Sprite" parent="CharacterName"]
position = Vector2( 59, 11 )
scale = Vector2( 0.254167, 0.0625001 )
z_index = -3
texture = ExtResource( 6 )

[node name="FileOpener" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="TextOutput/TextBox/ClickDetection" to="." method="_on_ClickDetection_pressed"]
